syntax = "proto3";

option go_package="auth-service/auth";

import "google/protobuf/empty.proto";

package auth;

service AuthService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty);
  rpc ValidateToken (ValidateTokenRequest) returns (google.protobuf.Empty);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message User {
  string username = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GetUserRequest {
  string access_token = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {
  string access_token = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  string access_token = 1;
  User user = 2;
}

message DeleteUserRequest {
  string access_token = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  string access_token = 1;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

